k8s/chatgpt.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatgpt-web-service
  namespace: chatgpt
spec:
  selector:
    app: chatgpt-web
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
      name: http-port
