k8s/chatgpt.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatgpt-web-ingress
  namespace: chatgpt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  rules:
  - host: chatgpt.mlops.pub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatgpt-web-service
            port:
              number: 3002
  tls:
  - hosts:
    - chatgpt.mlops.pub
    secretName: chatgpt-mlops-pub-tls
